# media-2-obsidian

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  bridge_client.py  config.example.yaml  spotify_client.py  trivy.yaml  youtube_auth.py
.github/workflows/: ci.yml  security.yml
docker/: docker-compose.yml
docs/: architecture.md
scripts/: run-docker.sh  run-local.sh
scripts/ci/: checks.sh  (+2 more)
src/: bridge_client.py  claude_client.py  core.py  pipeline.py  podcast_rss.py  server.py  spotify_client.py
systemd/: youtube-pipeline.service  youtube-pipeline.timer
tests/: test_bridge_client.py  test_core.py  test_pipeline.py  test_podcast_rss.py  test_spotify_client.py  test_transcribe_backend.py  test_youtube_auth.py
youtube-obsidian-pipeline/: .env.example  Dockerfile  README.md  bridge_client.py  claude_client.py  config.example.yaml  core.py  fetch_playlist.py  host_bridge.py  pipeline.py  pyproject.toml  server.py  transcribe_backend.py  youtube_auth.py
youtube-obsidian-pipeline/docker/: docker-compose.yml
youtube-obsidian-pipeline/prompts/: summary_prompt.txt  tags_prompt.txt
youtube-obsidian-pipeline/sandbox/: claude.sb.tmpl
youtube-obsidian-pipeline/scripts/: run-docker.sh  run-local.sh
youtube-obsidian-pipeline/systemd/: youtube-pipeline.service
youtube-obsidian-pipeline/tests/: test_bridge_client.py  test_claude_client.py  test_core.py  test_fetch_playlist.py  test_host_bridge.py  test_pipeline.py  test_server.py  test_transcribe_backend.py  test_youtube_auth.py
