[project]
name = "youtube-obsidian-pipeline"
version = "0.1.0"
description = "Media (YouTube/local file/link) -> transcript + AI summary -> GitHub + Obsidian pipeline"
requires-python = ">=3.11"
dependencies = [
    "google-auth==2.35.0",
    "google-auth-oauthlib==1.2.1",
    "google-api-python-client==2.149.0",
    "PyYAML==6.0.2",
    "yt-dlp>=2024.12.0",
]

[project.optional-dependencies]
# Host-only (Apple Silicon Mac) - needed by host_bridge.py's
# transcribe_backend.py. Do NOT add this to the container build (the
# Dockerfile runs plain `uv sync`, without --extra mlx) - mlx has no
# Linux wheels, and the container never needs it since pipeline.py talks
# to host_bridge.py over HTTP instead of importing parakeet-mlx directly.
# Install natively with `uv sync --extra mlx`.
mlx = [
    "parakeet-mlx>=0.5.2",
]

[tool.uv]
package = false

[tool.bandit]
exclude_dirs = [".venv"]
